# OpenAtta

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md  THIRD-PARTY-NOTICES.md
apps/shell/src-tauri/: Cargo.toml  tauri.conf.json
apps/shell/src-tauri/icons/: icon.icns
apps/shell/src-tauri/src/: autostart.rs  connection.rs  estop.rs  http_client.rs  installer.rs  lib.rs  main.rs  manager.rs  secrets.rs  service.rs  tunnel.rs  utils.rs  watcher.rs
crates/agent/: Cargo.toml
crates/agent/benches/: prompt_bench.rs
crates/agent/fuzz/: Cargo.toml
crates/agent/fuzz/fuzz_targets/: fuzz_guard_patterns.rs  fuzz_tool_params.rs  fuzz_xml_dispatch.rs
crates/agent/src/: background.rs  context.rs  hooks.rs  lib.rs  llm.rs  react.rs  research.rs  tool_executor.rs
crates/agent/src/dispatcher/: mod.rs  native.rs  traits.rs  xml.rs
crates/agent/src/prompt/: builder.rs  guard.rs  mod.rs  section.rs
crates/agent/src/prompt/sections/: channel_media.rs  conversation.rs  datetime.rs  identity.rs  mod.rs  prompt_guard.rs  runtime.rs  safety.rs  skills.rs  tools.rs  workspace.rs
crates/agent/src/provider/: anthropic.rs  deepseek.rs  mod.rs  openai.rs  reliable.rs  router.rs  schema.rs  sse.rs
crates/agent/tests/: agent_e2e.rs  agent_loop_robustness.rs  agent_streaming.rs  channel_dispatch.rs  prompt_assembly.rs  prompt_conversation.rs  prompt_guard_detection.rs  prompt_guard_sensitivity.rs  prompt_identity.rs  prompt_safety.rs  prompt_skills_modes.rs  prompt_tools_schema.rs  provider_failover.rs  provider_live_deepseek.rs  provider_router.rs  tool_executor_integration.rs
crates/agent/tests/common/: builders.rs  fixtures.rs  mock_channel.rs  mock_llm.rs  mock_registry.rs  mock_tools.rs  mod.rs
crates/audit/: Cargo.toml
crates/audit/src/: lib.rs  noop.rs  store.rs  traits.rs
crates/auth/: Cargo.toml
crates/auth/src/: allow_all.rs  lib.rs  rbac.rs  traits.rs
crates/bus/: Cargo.toml
crates/bus/src/: inproc.rs  lib.rs  nats.rs  traits.rs
crates/bus/tests/: nats_tests.rs
crates/channel/: Cargo.toml
crates/channel/src/: debounce.rs  dispatch.rs  draft.rs  factory.rs  handler.rs  heartbeat.rs  lib.rs  persistence.rs  policy.rs  registry.rs  runtime.rs  session.rs  supervisor.rs  traits.rs
crates/channel/src/impls/: clawdtalk.rs  dingtalk.rs  discord.rs  email.rs  imessage.rs  irc_channel.rs  lark.rs  matrix.rs  mattermost.rs  mod.rs  mqtt.rs  nextcloud_talk.rs  nostr.rs  qq.rs  signal.rs  slack.rs  telegram.rs  terminal.rs  wati.rs  webhook.rs  whatsapp.rs  whatsapp_storage.rs  whatsapp_web.rs
crates/channel/tests/: channel_integration.rs  channel_testcontainers.rs  channel_wiremock.rs
crates/cli/: Cargo.toml
crates/cli/src/: autostart.rs  client.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: agent_registry.rs  builtin_tools.rs  channel_handler.rs  condition.rs  coordinator.rs  cron_engine.rs  flow_engine.rs  lib.rs  log_broadcast.rs  middleware.rs  remote_agent_hub.rs  tool_registry.rs  usage_tracking.rs  webui.rs  ws_hub.rs
crates/core/src/server/: mod.rs  response.rs  ws.rs
crates/core/src/server/handlers/: agents.rs  approval.rs  audit.rs  channel.rs  chat.rs  cron.rs  diagnostics.rs  flow.rs  logs.rs  mcp.rs  memory.rs  mod.rs  node.rs  package.rs  remote.rs  security.rs  skill.rs  system.rs  task.rs  tool.rs  usage.rs
crates/core/src/skill_engine/: executor.rs  mod.rs  parser.rs  preloaded.rs  registry.rs  sync.rs  validator.rs
crates/core/tests/: api_contract.rs  api_integration.rs  cron_agent_integration.rs  e2e_smoke.rs  flow_integration.rs
crates/core/tests/fixtures/: api_contracts.json
crates/mcp/: Cargo.toml
crates/mcp/src/: jsonrpc.rs  lib.rs  registry.rs  sse.rs  stdio.rs  traits.rs
crates/memory/: Cargo.toml
crates/memory/src/: embedding.rs  embedding_cache.rs  fastembed.rs  lib.rs  mmr.rs  noop.rs  postgres.rs  rrf.rs  sqlite.rs  temporal_decay.rs  tokenizer.rs  traits.rs
crates/secret/: Cargo.toml
crates/secret/src/: lib.rs  sqlite.rs  traits.rs
crates/security/: Cargo.toml
crates/security/src/: classifier.rs  guard.rs  lib.rs  policy.rs  policy_pipeline.rs  tracker.rs
crates/security/src/approval/: channel_bridge.rs  cli.rs  manager.rs  mod.rs  types.rs  webhook.rs  ws.rs
crates/security/src/estop/: manager.rs  mod.rs  types.rs
crates/security/src/scrub/: detector.rs  mod.rs  patterns.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  home.rs  llm.rs  main.rs  services.rs
crates/store/: Cargo.toml
crates/store/src/: common.rs  lib.rs  postgres.rs  sqlite.rs  traits.rs
crates/store/tests/: postgres_tests.rs  sqlite_tests.rs
crates/tools/: Cargo.toml
crates/tools/src/: agents_inbox.rs  agents_list.rs  agents_send.rs  apply_patch.rs  browser.rs  browser_cdp.rs  browser_chromium.rs  cli_discovery.rs  content_search.rs  cron.rs  cron_list.rs  cron_remove.rs  cron_run.rs  cron_runs.rs  cron_update.rs  delegate_status.rs  delegation.rs  file_edit.rs  file_read.rs  file_write.rs  git_ops.rs  glob_search.rs  http_request.rs  image_info.rs  lib.rs  memory.rs  model_routing.rs  pdf_read.rs  process.rs  proxy_config.rs  pushover.rs  registry.rs  schedule.rs  screenshot.rs  shell.rs  start_flow.rs  state_get.rs  state_set.rs  subagent_list.rs  subagent_manage.rs  (+5 more)
crates/types/: Cargo.toml
crates/types/src/: agent.rs  agent_trait.rs  approval.rs  auth.rs  chat.rs  cron.rs  cron_trait.rs  error.rs  event.rs  flow.rs  flow_runner.rs  id.rs  lib.rs  mcp.rs  memory.rs  native_tool.rs  node.rs  package.rs  plugin.rs  remote_agent.rs  serde_util.rs  skill.rs  task.rs  tool.rs  usage.rs
docs/: README.cn.md  architecture.md  auth-plan.md  auth-remote-agent-design.md  brief-fastembed.md  brief-memory-architecture.md  brief-memory-comparison.md  brief-vector-search.md  ci-strategy.md  client-server-architecture.md  comparison.md  install-upgrade-architecture.md  sandbox-runtime-proposal.md  tech-stack.md  ui-comparison.md  ui-refactor-plan.md  usage.md
flows/: bug-triage.yaml  code-review.yaml  daily-digest.yaml  prd-to-code.yaml  research-report.yaml  skill-onboard.yaml
(+99 files in other folders)
