[package]
name = "atta-agent"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
atta-types = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
async-stream = "0.3"
tokio-stream = "0.1"
pin-project-lite = "0.2"
hostname = "0.4"
regex = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "prompt_bench"
harness = false
