[package]
name = "atta-audit"
version = "0.1.0"
edition = "2021"
license.workspace = true

[features]
default = []
sqlite = ["sqlx"]

[dependencies]
atta-types = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
