[package]
name = "atta-mcp"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
atta-types = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
