[package]
name = "atta-secret"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
atta-types = { workspace = true }
async-trait = { workspace = true }
aes-gcm = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
secrecy = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
