[package]
name = "atta-server"
version = "0.1.0"
edition = "2021"
license.workspace = true

[[bin]]
name = "attaos"
path = "src/main.rs"

[features]
default = ["desktop"]
desktop = ["atta-bus/inproc", "atta-store/sqlite", "atta-auth/allow_all", "atta-audit/sqlite", "atta-memory/fastembed"]
enterprise = ["atta-bus/nats", "atta-store/postgres", "atta-auth/rbac", "atta-audit/sqlite", "atta-memory/postgres"]
terminal-channel = ["atta-channel/terminal"]
webhook-channel = ["atta-channel/webhook"]

[dependencies]
atta-types = { workspace = true }
atta-bus = { path = "../bus" }
atta-store = { path = "../store" }
atta-auth = { path = "../auth" }
atta-audit = { path = "../audit" }
atta-core = { path = "../core" }
atta-agent = { path = "../agent" }
atta-mcp = { path = "../mcp" }
atta-channel = { path = "../channel" }
atta-security = { path = "../security" }
atta-memory = { path = "../memory" }
atta-tools = { path = "../tools", features = ["memory"] }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
serde_yml = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
