[package]
name = "atta-store"
version = "0.1.0"
edition = "2021"
license.workspace = true

[features]
default = ["sqlite"]
sqlite = []
postgres = []

[dependencies]
atta-types = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
