[package]
name = "atta-types"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
semver = { workspace = true }
async-trait = { workspace = true }
bs58 = { workspace = true }
