[package]
name = "atta-shell"
version = "0.1.0"
edition = "2021"
license.workspace = true

[[bin]]
name = "attash"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
flate2 = "1"
tar = "0.4"
sha2 = { workspace = true }
futures = { workspace = true }
serde_yaml = "0.9"
tokio-util = "0.7"
zeroize = "1"
chacha20poly1305 = "0.10"
rand = "0.8"
notify = "7"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
url = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
